# allure-demo

./: .gitignore  README.md
API/: README.md  allurerc.mjs  allurerc.testops.mjs  pyproject.toml  requirements.txt
API/demo_api_tests.egg-info/: PKG-INFO  SOURCES.txt
API/tests/: api_logging.py  conftest.py  flaky.py
API/tests/clients/: catalog_client.py  identity_client.py  orders_client.py
E2E/: README.md  allurerc.mjs  allurerc.testops.mjs  package-lock.json  package.json  playwright.config.ts
E2E/fixtures/: test.ts  users.ts
E2E/helpers/: demoPages.ts
E2E/pages/: CatalogPage.ts  LoginPage.ts
E2E/tests/: flaky.ts  metadata.ts
pipelines/ado/: api-tests-allure-report.yml  api-tests-allure-testops.yml  api-tests-allure.yml  api-tests-allurectl-testops.yml  e2e-tests-allure-report.yml  e2e-tests-allure-testops.yml  e2e-tests-allurectl-testops.yml  e2e-tests-playwright.yml  unit-tests-allure-report.yml  unit-tests-allure-testops.yml  unit-tests-allurectl-testops.yml  unit-tests-pytest.yml
unit/: README.md  allurerc.mjs  allurerc.testops.mjs  pyproject.toml
unit/src/demo_shop/: __init__.py
unit/src/demo_shop/catalog/: __init__.py  pricing.py
unit/src/demo_shop/checkout/: __init__.py  cart.py
unit/src/demo_shop/users/: __init__.py  permissions.py
unit/src/demo_shop_unit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
unit/tests/: conftest.py  test_volume.py
unit/tests/catalog/: test_pricing.py  test_pricing_volume.py
unit/tests/checkout/: test_cart.py  test_cart_volume.py
unit/tests/users/: test_permissions.py  test_permissions_volume.py
(+16 files in other folders)
