[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-shop-unit"
version = "0.1.0"
description = "Small Python package used for unit test demos."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
